[tool.poetry]
name = "7-oscylator"
version = "0.1.0"
description = ""
authors = ["Pablo1644 <pawel.wagrodzki@gmail,com>"]
readme = "README.md"
packages = [{include = "7_oscylator"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
